tests/lean/typeMismatch.lean.expected.out
typeMismatch.lean:7:0: error: type mismatch
  IO.println ""
has type
  EIO IO.Error Unit
but it is expected to have type
  IO Nat
typeMismatch.lean:12:0: error: type mismatch
  Meta.isDefEq x x
has type
  ReaderT Meta.Context (StateRefT Meta.State CoreM) Bool
but it is expected to have type
  MetaM Unit
